[tool.pdm]
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
verify_ssl = true
name = "torch"

[project]
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
]

[project.optional-dependencies]
generate-onnx = [
    "einops>=0.6.0",
    "timm~=0.6.0",
    "onnx>=1.14.0",
]
server = [
    "onnxruntime>=1.15.0",
    "uvicorn[standard]>=0.22.0",
    "fastapi>=0.96.0",
    "python-multipart>=0.0.6",
]
